--- a/public/assets/scss/component/_common.scss
+++ b/public/assets/scss/component/_common.scss
@@ -427,13 +427,15 @@ p {
 	line-height: 52px;
 	text-align: center;
 	padding: 0 25px;
-	color: $white;
-	background: $e-blue;
-	@include border-radius(4px);
+	color: $e-blue;
+	background: transparent;
+	border: 2px solid $e-blue ;
 	font-weight: 500;
-
+	border-radius: 500px;
 	&:hover {
-		color: $white;
+		background: $e-blue;
+		color: white;
+		border-color: $e-blue;
 		@include box-shadow(0px 10px 24px 0px rgba(4, 23, 118, 0.3));
 	}
 
