--- a/public/assets/scss/component/_footer.scss
+++ b/public/assets/scss/component/_footer.scss
@@ -216,3 +216,18 @@
         }
     }
 }
+
+.loaderIcon {
+    margin-right: 7px;
+    top: 2px;
+    animation: spin 2s infinite linear;
+}
+
+@keyframes spin {
+    from {
+        transform: scale(1) rotate(0deg);
+    }
+    to {
+        transform: scale(1) rotate(360deg);
+    }
+}
