--- a/public/assets/scss/component/_services.scss
+++ b/public/assets/scss/component/_services.scss
@@ -92,3 +92,99 @@
         }
     }
 }
+
+//services details css
+.services-d-title{
+    font-size: 40px;
+    line-height: 1.3;
+    @media #{$sm} {
+        font-size: 35px;
+    }
+    @media #{$xs} {
+        font-size: 30px;
+    }
+}
+.services-sm-image{
+    & img{
+        border-radius: 10px;
+    }
+}
+.services-text{
+    line-height: 30px;
+}
+.services-sm-title{
+    font-size: 30px;
+    line-height: 1.2;
+    @media #{$xs} {
+        font-size: 25px;
+    }
+}
+.step{
+    &-item{
+        position: relative;
+        & p{
+            line-height: 26px;
+        }
+        &-shape{
+            position: absolute;
+            @media #{$xs} {
+                display: none;
+            }
+        }
+        & .shape-1{
+            top: 5px;
+            right: -80px;
+        }
+    }
+    &-title{
+        font-size: 18px;
+        font-weight: 600;
+    }
+    &-number{
+        width: 45px;
+        height: 45px;
+        line-height: 45px;
+        background: $e-blue;
+        display: block;
+        text-align: center;
+        margin: 0 auto;
+        font-size: 16px;
+        font-weight: 600;
+        color: white;
+        border-radius: 50%;
+        font-family: "'Poppins', sans-serif";
+        z-index: 1;
+        &-wrapper{
+            position: relative;
+            &::after{
+                position: absolute;
+                content: '';
+                background: #FFEDF0;
+                right: 0;
+                left: 0;
+                top: -15px;
+                width: 75px;
+                height: 75px;
+                z-index: -1;
+                border-radius: 50%;
+                margin: 0 auto;
+            }
+        }
+    }
+}
+.services-padd{
+    padding-top: 135px;
+    padding-bottom: 125px;
+}
+.services-padd-cta{
+    padding-top: 120px;
+    padding-bottom: 135px;
+}
+.services-blog-padd{
+    padding-bottom: 110px;
+    padding-top: 0;
+}
+.services-brand{
+    padding-bottom: 125px;
+    padding-top: 0;
+}
