--- a/public/assets/scss/component/_job.scss
+++ b/public/assets/scss/component/_job.scss
@@ -137,7 +137,7 @@
 
 //square
 .tp-solid-btn-square{
-	color: white;
+	color: $white;
 	font-size: 14px;
 	text-transform: uppercase;
 	letter-spacing: 2px;
