--- a/public/assets/scss/component/_privacy.scss
+++ b/public/assets/scss/component/_privacy.scss
@@ -94,7 +94,7 @@
             text-align: center;
             line-height: 88px;
             background:  #FD4766;
-            color: white;
+            color: $white;
             font-size: 25px;
             display: inline-block;
             position: absolute;
