--- a/public/assets/scss/component/_course.scss
+++ b/public/assets/scss/component/_course.scss
@@ -69,7 +69,7 @@
             line-height: 24px;
             font-size: 14px;
             font-weight: 500;
-            color: white;
+            color: $white;
             background: $e-purple;
             padding: 0 10px;
             @include border-radius(4px);
@@ -610,12 +610,12 @@
                                 &.grid {
                                     & .st0 {
                                         fill: none;
-                                        stroke: white;
+                                        stroke: $white;
                                     }
                                 }
 
                                 & .st0 {
-                                    fill: white;
+                                    fill: $white;
                                 }
                             }
                         }
@@ -678,7 +678,7 @@
 
                         & .nav-link {
                             background: $e-blue;
-                            color: white;
+                            color: $white;
                         }
                     }
                 }
@@ -1027,33 +1027,36 @@
                     background: $grey;
                     @include border-radius(4px);
 
-                    &.fb {
+                    &.fb{
                         color: #285da1;
                         background: rgba($color: #285da1, $alpha: .1);
-
-                        &:hover {
-                            color: white;
+                        &:hover{
+                            color: $white;
                             background: #285da1;
                         }
                     }
-
-                    &.tw {
+                    &.tw{
                         color: #03a9f4;
                         background: rgba($color: #03a9f4, $alpha: .1);
-
-                        &:hover {
+                        &:hover{
                             color: $white;
                             background: #03a9f4;
                         }
                     }
-
-                    &.pin {
-                        color: #d8163f;
-                        background: rgba($color: #d8163f, $alpha: .1);
-
-                        &:hover {
-                            color: white;
-                            background: #d8163f;
+                    &.ins{
+                        color: #fb2384;
+                        background: rgba($color: #fb2384, $alpha: .1);
+                        &:hover{
+                            color: $white;
+                            background: #fb2384;
+                        }
+                    }
+                    &.lin{
+                        color: #0077b5;
+                        background: rgba($color: #0077b5, $alpha: .1);
+                        &:hover{
+                            color: $white;
+                            background: #0077b5;
                         }
                     }
                 }
