--- a/public/assets/scss/component/_services.scss
+++ b/public/assets/scss/component/_services.scss
@@ -150,7 +150,7 @@
         margin: 0 auto;
         font-size: 16px;
         font-weight: 600;
-        color: white;
+        color: $white;
         border-radius: 50%;
         font-family: "'Poppins', sans-serif";
         z-index: 1;
