connect to sheetdb
Signed-off-by: Hovah <hovahyii@gmail.com>

--- a/public/assets/scss/main.scss
+++ b/public/assets/scss/main.scss
@@ -27,3 +27,7 @@
 @use 'component/footer';
 @use 'component/privacy';
 @use 'component/job';
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
